# why-agent

./: .cursorrules  .gitignore  LICENSE  README.md  docker-compose.yml
sidecar/: Dockerfile  pyproject.toml
sidecar/app/: main.py  security.py
tests/: __init__.py  conftest.py  test_canonicalize.py  test_guardrails.py
tests/data/: golden.json
tests/utils/: __init__.py  audit_drift.py  canonicalize.py
